sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:12: error: ')' expected but ',' found.
  for (i<-0 to nbValeurs-2, -1)
                          ^AlgCocktailSort1:13: error: illegal start of simple expression
  if (plusPetit(i,i+1)) {
                      ^