sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var Tri=0
  var nbValeurs=getNombreValeurs()
  while(Tri<nbValeurs) {
    Tri=Tri+1
  for (i<-0 to nbValeurs-2) {
    if (!plusPetit(i,i+1)) {
      echange (i, i+1)
    }
  }
  for (i<-0 to nbValeurs-2, -1)
  if (plusPetit(i,i+1)) {
    echange (i,i+1)
  }
}
}